manifests/api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - image: swashbuck1r/simple-go-api-server:1.0.1
          name: api-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: default
  labels:
    app: api-server
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
